2015-08-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r23049.

	* base/drop_privileges.c (drop_privileges): Check effective user ID
	instead of user ID when deciding if privileges need to be dropped.

2015-08-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22992.

	* base/osp.c (osp_param_name): New function.

	* base/osp.h (osp_param_name): New function prototype.

2015-07-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r22820.

	* osp/osp.c (osp_get_version): Gracefully handle errors in OSP protocol,
	instead of using assert().

2015-07-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 8.0.5.

2015-07-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 8.0.4 release.

	* CHANGES: Updated.

2015-07-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Revert r22626.

	* misc/kb_redis.c (redis_vcommand, redis_command): Remove functions.
	(try_database_index, fetch_max_db_index_compat, fetch_max_db_index)
	(select_database, redis_release_db, redis_transaction_new)
	(redis_transaction_cmd, redis_transaction_end, redis_cmd): Use
	redisCommand() and redisvCommand().

2015-06-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r22656.

	* nasl/nasl_ssh.c (nasl_ssh_set_login): Check that username is not
	empty.
	(nasl_ssh_userauth): Return on nasl_ssh_set_login() error.

2015-06-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r22648.

	* nasl/nasl_ssh.c (exec_ssh_cmd): Zero buffer, reset retry counter on
	read success.

2015-06-10  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22625.

	* misc/kb_redis.c (redis_vcommand, redis_command): New functions.
	Same as redisCommand and redisvCommand, but will retry after EINTR.
	(try_database_index, fetch_max_db_index_compat, fetch_max_db_index)
	(select_database, redis_release_db, redis_transaction_new)