@@ -30,6 +30,7 @@
 #include "regex.h"
 #include "../misc/openvas_logging.h"
 #include "../misc/prefs.h"           /* for prefs_get */
+#include "../misc/plugutils.h"
 
 #include "nasl.h"
 #include "nasl_tree.h"
@@ -1717,6 +1718,7 @@ exec_nasl_script (struct arglist *script_infos, const char *name,
   bzero (&ctx, sizeof (ctx));
   if (mode & NASL_ALWAYS_SIGNED)
     ctx.always_authenticated = 1;
+  ctx.kb = plug_get_kb (script_infos);
 
   if (init_nasl_ctx (&ctx, name) == 0)
     {
